--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.jone.jinux.tuwen.main.MainActivity">
+
+    <com.jone.jinux.tuwen.main.JOneCanvas
+        android:id="@+id/bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.jone.jinux.tuwen.main.MainActivity"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        >
+        android:layout_height="wrap_content"
+        android:background="@android:color/white">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onSeClick"
-            android:text="Color"
-            app:layout_constraintBottom_toBottomOf="@+id/button2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/button2"/>
+    </com.jone.jinux.tuwen.main.JOneCanvas>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            android:onClick="onTuClick"
-            android:text="Picture"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="16dp"
+        android:onClick="onSeClick"
+        android:text="Color" />
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="24dp"
-            android:elevation="5dp"
-            android:onClick="onShareClick"
-            android:text="Share"
-            app:layout_constraintBottom_toBottomOf="@+id/button2"
-            app:layout_constraintDimensionRatio="0.01"
-            app:layout_constraintLeft_toRightOf="@+id/button2"
-            app:layout_constraintRight_toRightOf="parent"/>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="16dp"
+        android:onClick="onTuClick"
+        android:text="Picture" />
 
-       <com.jone.jinux.tuwen.main.JOneCanvas
-            android:id="@+id/bg"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/button2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-           android:background="@android:color/white">
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="16dp"
+        android:elevation="5dp"
+        android:onClick="onShareClick"
+        android:text="Share" />
 
-        </com.jone.jinux.tuwen.main.JOneCanvas>
-    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
